@@ -3,7 +3,7 @@
 # SPDX-License-Identifier: Apache-2.0 OR MIT
 
 [tool.bumpversion]
-current_version = "0.2.4"
+current_version = "0.2.5"
 
 [[tool.bumpversion.files]]
 filename = "crates/capi/examples/meson.build"
